[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/PlayerShip.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Main_Game/PlayerShip.gd" type="Script" id=2]
[ext_resource path="res://Sprites/ship_tilt_left01.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ship_tilt_left02.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ship_tilt_right02.png" type="Texture" id=5]
[ext_resource path="res://Audio/SFX/player_shoot.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sprites/shipExplosion7.png" type="Texture" id=7]
[ext_resource path="res://Sprites/shipExplosion4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/shipExplosion6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/shipExplosion5.png" type="Texture" id=10]
[ext_resource path="res://Sprites/shipExplosion1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/shipExplosion2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/shipExplosion3.png" type="Texture" id=13]
[ext_resource path="res://Audio/SFX/ship_explosion.ogg" type="AudioStream" id=14]
[ext_resource path="res://Sprites/engineanim1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/engineanim2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/engineanim3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/engineanim4.png" type="Texture" id=18]
[ext_resource path="res://Sprites/engineanim5.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": false,
"name": "tilt-right",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "tilt-left",
"speed": 12.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": false,
"name": "explode",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "engine",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 32 )

[node name="PlayerShip" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="PlayerShipRed" type="AnimatedSprite" parent="."]
scale = Vector2( 2.5, 2.5 )
z_index = 3
frames = SubResource( 1 )
animation = "idle"

[node name="PlayerMovementTween" type="Tween" parent="PlayerShipRed"]

[node name="PlayerShootTimer" type="Timer" parent="PlayerShipRed"]

[node name="ShipShoot" type="AudioStreamPlayer2D" parent="PlayerShipRed"]
stream = ExtResource( 6 )
volume_db = -11.107

[node name="EntranceAnimationTween" type="Tween" parent="PlayerShipRed"]

[node name="ShipExplode" type="AudioStreamPlayer2D" parent="PlayerShipRed"]
stream = ExtResource( 14 )

[node name="Engine" type="AnimatedSprite" parent="PlayerShipRed"]
position = Vector2( 0, 12 )
scale = Vector2( 1, 1 )
z_index = 4
frames = SubResource( 3 )
animation = "engine"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="tween_all_completed" from="PlayerShipRed/PlayerMovementTween" to="." method="_on_PlayerMovementTween_tween_all_completed"]
[connection signal="timeout" from="PlayerShipRed/PlayerShootTimer" to="." method="_on_PlayerShootTimer_timeout"]
[connection signal="tween_all_completed" from="PlayerShipRed/EntranceAnimationTween" to="." method="_on_EntranceAnimationTween_tween_all_completed"]
